[S10P12A306-680] Refactor: Refactor grades management sources